# text-gen

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
base_image/: Dockerfile
src/: conversation.py  hooks_config.py  index.html  models.py  routes.py
src/custom_vecstore/: combine.py  generators.py  memory.py  retrievers.py  vecstores.py
src/custom_vecstore/internal/: datastore.py  texts.py
