[tool.poetry]
name = "app"
version = "0.0.0"
description = ""
authors = []
packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
gunicorn = "^21.2.0"
langchain = "^0.1.12"
llama-cpp-python = "^0.2.56"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
